Making progress bar work.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
             android:label="main_layout" />
         <activity android:name=".FirstStep" />
         <activity android:name=".SecondStep" />
-        <activity android:name=".ThirdStep"></activity>
+        <activity android:name=".ThirdStep" />
+        <activity android:name=".FourthStep"></activity>
     </application>
 
 </manifest>
