--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.android.cordcalculator"
+        applicationId "com.android.cordcalculator"
         minSdkVersion 17
         targetSdkVersion 26
         versionCode 1
