--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.cordcalculator">
+    package="com.android.cordcalculator">
 
     <application
         android:allowBackup="true"
@@ -8,26 +8,30 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
-        <activity android:name=".StartingScreenActivity">
+
+        <activity android:name="com.bobbiny.cordcalculator.launch.LaunchActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.bobbiny.cordcalculator.StartingScreenActivity" />
+        <activity
+            android:name="com.bobbiny.cordcalculator.main.MainActivity"
+            android:label="main_layout" />
+        <activity android:name="com.bobbiny.cordcalculator.FirstQuestion" />
+        <activity android:name="com.bobbiny.cordcalculator.SecondQuestion" />
+        <activity android:name="com.bobbiny.cordcalculator.ThirdQuestion" />
+        <activity android:name="com.bobbiny.cordcalculator.FourthQuestion" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
-        <activity
-            android:name=".MainLayoutActivity"
-            android:label="main_layout" />
-        <activity android:name=".FirstQuestion" />
-        <activity android:name=".SecondQuestion" />
-        <activity android:name=".ThirdQuestion" />
-        <activity android:name=".FourthQuestion"></activity>
     </application>
 
 </manifest>
